namespaces/live.cloud-platform.service.justice.gov.uk/LAA-claim-non-standard-magistrate-fee-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: LAA-claim-non-standard-magistrate-fee-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "crmseven"
    cloud-platform.justice.gov.uk/application: "LAA-Claim-non-standard-magistrate-fee"
    cloud-platform.justice.gov.uk/owner: "crm-7: sandeep.mittal@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-claim-non-standard-magistrate-fee-backend"
    cloud-platform.justice.gov.uk/team-name: "ministryofjustice"
    cloud-platform.justice.gov.uk/review-after: "2023-07-18"
